==> amlweems/wiced-history/WICED/platform/MCU/LPC18xx/WAF/waf_platform.c <==
#include <string.h>
#include <stdlib.h>
#include "spi_flash.h"
#include "platform_config.h"
#include "platform_peripheral.h"
#include "wwd_assert.h"
#include "wiced_framework.h"
#include "wiced_apps_common.h"
#include "waf_platform.h"
#include "wwd_constants.h"
#include "platform_cmsis.h"
#define LPC183x_PART
#define LPC18XX_ENABLE_FLASH_WRITING_FAILS_BREAKS
#define APP_CODE_A_START_ADDR                   ( (uint32_t) &app_code_a_start_addr_loc )
#define APP_CODE_A_MAX_SIZE                     ( (uint32_t) &app_code_a_size_loc )
#define APP_CODE_B_START_ADDR                   ( (uint32_t) &app_code_b_start_addr_loc )
#define APP_CODE_B_MAX_SIZE                     ( (uint32_t) &app_code_b_size_loc )
#define APP_CODE_A_END_ADDR                     ( APP_CODE_A_START_ADDR + APP_CODE_A_MAX_SIZE )
#define APP_CODE_B_END_ADDR                     ( APP_CODE_B_START_ADDR + APP_CODE_B_MAX_SIZE )
#define LPC18XX_PAGE_SIZE                     ( 512 )
#define LPC18XX_START_BANK_SECTOR             ( 0 )
#define LPC18XX_END_BANK_SECTOR               ( 14 )
#define LPC18XX_BANKA_START_ADDRESS           ( 0x1A000000 )
#define LPC18XX_BANKB_START_ADDRESS           ( 0x1B000000 )
#define LPC18XX_GET_SECTOR_FROM_ADDRESS
#define LPC18XX_LOCAL_SRAM1_START_ADDRESS     ( 0x10000000 )
#define LPC18XX_LOCAL_SRAM2_START_ADDRESS     ( 0x10080000 )
#define LPC18XX_AHB_SRAM1_START_ADDRESS       ( 0x20000000 )
#define LPC18XX_AHB_SRAM2_START_ADDRESS       ( 0x2000C000 )

platform_result_t platform_erase_flash( uint16_t start_sector, uint16_t end_sector )
{
    platform_result_t result                = PLATFORM_SUCCESS;
    uint32_t          iap_init_command_args[ IAP_MAX_COMMAND_ARGS ];
    uint32_t          iap_erase_sectors_args[ IAP_MAX_COMMAND_ARGS ];
    uint32_t          status_code[ IAP_MAX_RESULTS ];

    /* Init IAP  */
    memset(status_code, 0x00, sizeof(status_code));
    iap_init_command_args[ 0 ] = IAP_INIT;
    iap_entry( &iap_init_command_args[0], &status_code[ 0 ] );
    wiced_assert("", status_code[ 0 ] == IAP_CMD_SUCCESS);
    if ( status_code[ 0 ] != IAP_CMD_SUCCESS )
    {
        return PLATFORM_ERROR;
    }
    /* Unlock sectors */
    result = platform_unlock_sectors( start_sector, end_sector );
    if ( result != PLATFORM_SUCCESS )
    {
        return result;
    }

    memset( status_code, 0x00, sizeof(status_code) );
    iap_erase_sectors_args[ COMMAND_CODE_INDEX_IN_ERASE_SECTORS ]        = IAP_ERASE_SECTORS;
    iap_erase_sectors_args[ START_SECTOR_NUMBER_INDEX_IN_ERASE_SECTORS ] = ( start_sector >= LPC18XX_BANKB_START_SECTOR ) ? ( start_sector - LPC18XX_BANKB_START_SECTOR ) : ( start_sector );
    iap_erase_sectors_args[ END_SECTOR_NUMBER_INDEX_IN_ERASE_SECTORS ]   = ( end_sector   >= LPC18XX_BANKB_START_SECTOR ) ? ( end_sector - LPC18XX_BANKB_START_SECTOR )   : ( end_sector );
    iap_erase_sectors_args[ CPU_CLOCK_FREQUENCY_INDEX_IN_ERASE_SECTORS ] = CPU_CLOCK_HZ / 1000;
    iap_erase_sectors_args[ FLASH_BANK_INDEX_IN_ERASE_SECTORS ]          = ( end_sector   >= LPC18XX_BANKB_START_SECTOR ) ? ( 1 ) : (0);
    iap_entry( &iap_erase_sectors_args[ 0 ], &status_code[ 0 ] );
    if ( status_code[ 0 ] != IAP_CMD_SUCCESS )
    {
        return PLATFORM_ERROR;
    }
    return PLATFORM_SUCCESS;
}

platform_result_t platform_write_flash_chunk( uint32_t address, const void* data, uint32_t size )
{
    platform_result_t result          = PLATFORM_SUCCESS;
    uint32_t          start_offset    = 0;
    uint32_t          end_offset      = 0;
    uint8_t*          data_ptr        = (uint8_t*) data;
    uint16_t          written_first   = 0;
    uint16_t          written_last    = 0;
    uint8_t           write_page_buffer   [ LPC18XX_PAGE_SIZE ];
    uint8_t           compare_page_buffer [ LPC18XX_PAGE_SIZE ];
    uint32_t          bytes_remaining;
    uint8_t*          write_address;
    uint8_t*          read_address;

    /* Init IAP */
    result = lpc18xx_init_iap();
    if ( result != PLATFORM_SUCCESS )
    {
        return result;
    }

    /* Set mask on all bytes in the page write buffer */
    memset( write_page_buffer, 0xFF, sizeof(write_page_buffer) );
    start_offset = address & ( LPC18XX_PAGE_SIZE - 1 );

    if ( start_offset != 0 )
    {
        uint32_t start_of_page_address = address - start_offset;

        /* Read first incomplete page to the buffer which will used to check the flash page integrity */
        memcpy( compare_page_buffer, (uint8_t*) start_of_page_address, LPC18XX_PAGE_SIZE );

        /* Copy new data from the start_offset in the page */
        memcpy( &write_page_buffer  [ start_offset ], data, MIN( size, LPC18XX_PAGE_SIZE - start_offset) );
        memcpy( &compare_page_buffer[ start_offset ], data, MIN( size, LPC18XX_PAGE_SIZE - start_offset) );

        /* calculate the number of bytes which will be written during this page write */
        written_first = MIN(size, (LPC18XX_PAGE_SIZE - start_offset));

        /* Write page to the flash memory */
        result = lpc18xx_write_page( start_of_page_address, write_page_buffer, LPC18XX_DO_NOT_ERASE_PAGE_BEFORE_WRITE );
        if ( result != PLATFORM_SUCCESS )
        {
            LPC18XX_FLASH_WRITING_ERROR_INDICATE();
            return result;
        }

        /* Check flash page integrity. The writing of the current data may have caused the modification of the
         * data which was written to this page before but was masked in the current write */
        if ( memcmp( (char *)start_of_page_address, compare_page_buffer, LPC18XX_PAGE_SIZE ) != 0 )
        {
            result = lpc18xx_write_page( start_of_page_address, compare_page_buffer, LPC18XX_ERASE_PAGE_BEFORE_WRITE );
            if ( memcmp( (char *)start_of_page_address, compare_page_buffer, LPC18XX_PAGE_SIZE ) != 0 )
            {
                /* Writing to LPC18xx internal flash has failed. The contents of the buffer and
                 * the data read directly from the internal FLASH do not match */
                LPC18XX_FLASH_WRITING_ERROR_INDICATE();
                return PLATFORM_ERROR;
            }
        }

        if ( written_first == size )
        {
            return PLATFORM_SUCCESS;
        }
    }


    /* If the end address is not aligned to the page size, read full page to the temporary buffer and
     * copy unaligned number of bytes  */
    end_offset   = ( address + size ) & ( LPC18XX_PAGE_SIZE - 1 );

    /* Set mask on all bytes in the page write buffer */
    memset( write_page_buffer, 0xFF, sizeof(write_page_buffer) );

    if ( end_offset != 0 )
    {
        uint32_t start_of_page_address = ( address + size ) - end_offset;

        /* Read last incomplete page to the buffer which will used to check the flash page integrity */
        memcpy( compare_page_buffer, (uint8_t*) start_of_page_address, LPC18XX_PAGE_SIZE );

        /* Copy new data from the start of the page up to the end_offset */
        memcpy( write_page_buffer,   &data_ptr[ size - end_offset ], end_offset );
        memcpy( compare_page_buffer, &data_ptr[ size - end_offset ], end_offset );

        /* Write page to the flash memory */
        result = lpc18xx_write_page( start_of_page_address, write_page_buffer, LPC18XX_DO_NOT_ERASE_PAGE_BEFORE_WRITE );
        if ( result != PLATFORM_SUCCESS )
        {
            LPC18XX_FLASH_WRITING_ERROR_INDICATE();
            return result;
        }

        /* Check flash page integrity. The writing of the current data may have caused the modification of the
         * data which was written to this page previously but was masked in the current write */
        if ( memcmp( (char *)start_of_page_address, compare_page_buffer, LPC18XX_PAGE_SIZE ) != 0 )
        {
            result = lpc18xx_write_page( start_of_page_address, compare_page_buffer, LPC18XX_ERASE_PAGE_BEFORE_WRITE );
            if ( memcmp( (char *)start_of_page_address, compare_page_buffer, LPC18XX_PAGE_SIZE ) != 0 )
            {
                /* Writing to LPC18xx internal flash has failed. The contents of the buffer and
                 * the data read directly from the internal FLASH do not match */
                LPC18XX_FLASH_WRITING_ERROR_INDICATE();
                return PLATFORM_ERROR;
            }
        }
        written_last = end_offset ;
    }

    write_address   = (uint8_t*) ( ( start_offset != 0 ) ? ( address + ( LPC18XX_PAGE_SIZE - start_offset ) ) : ( address ) );
    read_address    = ( start_offset != 0 ) ? &data_ptr[ LPC18XX_PAGE_SIZE - start_offset ] : data_ptr;
    bytes_remaining = size - ( written_first + written_last );

    while ( bytes_remaining != 0 )
    {
        if ( IS_ADDRESS_IN_SRAM_RANGE((uint32_t)read_address) == 0 )
        {
            /* Use temporary buffer allocated in SRAM if the read address belongs to SRAM */
            memcpy( write_page_buffer, read_address, LPC18XX_PAGE_SIZE );

            /* Write page to the flash memory */
            result = lpc18xx_write_page( (uint32_t) write_address, write_page_buffer, LPC18XX_DO_NOT_ERASE_PAGE_BEFORE_WRITE );
        }
        else
        {
            /* Write page to the flash memory */
            result = lpc18xx_write_page( (uint32_t) write_address, read_address, LPC18XX_DO_NOT_ERASE_PAGE_BEFORE_WRITE );
        }

        if ( result != PLATFORM_SUCCESS )
        {
            LPC18XX_FLASH_WRITING_ERROR_INDICATE();
            return result;
        }

        bytes_remaining -= LPC18XX_PAGE_SIZE;
        write_address   += LPC18XX_PAGE_SIZE;
        read_address    += LPC18XX_PAGE_SIZE;
    }

    return PLATFORM_SUCCESS;
}

void platform_erase_app_area( uint32_t physical_address, uint32_t size )
{
    UNUSED_PARAMETER(physical_address);
    UNUSED_PARAMETER(size);

    if ( IS_ADDRESS_IN_SRAM_RANGE(physical_address) == WICED_FALSE )
    {
        if ( physical_address == (uint32_t)DCT1_START_ADDR )
        {
            platform_erase_flash( PLATFORM_DCT_COPY1_START_SECTOR, PLATFORM_DCT_COPY1_END_SECTOR );
        }
        else
        {
            platform_erase_flash( APP_CODE_A_START_SECTOR, APP_CODE_A_END_SECTOR );
            if ( ( physical_address + size ) > LPC18XX_BANKB_START_ADDRESS )
            {
                platform_erase_flash( APP_CODE_B_START_SECTOR, APP_CODE_B_END_SECTOR );
            }
        }
    }
}

static wiced_result_t platform_copy_app_to_iflash( const image_location_t* app_header_location, uint32_t offset, uint32_t physical_address, uint32_t size )
{
    int i = 0;
    uint8_t buff[ LPC18XX_PAGE_SIZE ];

    while ( size > 0 )
    {
        uint32_t write_size = MIN( sizeof(buff), size);
        wiced_apps_read( app_header_location, buff, offset, write_size );
        platform_write_flash_chunk( (uint32_t) physical_address, buff, write_size );
        if ( memcmp( (char *)physical_address, buff, write_size ) != 0 )
        {
            LPC18XX_FLASH_WRITING_ERROR_INDICATE();
            return PLATFORM_ERROR;
        }

        offset           += write_size;
        physical_address += write_size;
        size             -= write_size;
        i++;
    }
    return PLATFORM_SUCCESS;
}
